--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "react-dom": "18.3.1",
     "react-icons": "*",
     "react-native": "0.76.5",
-    "react-native-gesture-handler": "^2.21.2",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^3.16.5",
-    "react-native-safe-area-context": "^4.14.1",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.19.13"
